*SVN*

* Updated CSS and generator to more Railsy layout and colors, borrowed from Tom Werners' #6036 default error pages patch

* Add more info to README, add this CHANGELOG