@@ -4,12 +4,12 @@
 <head>
   <title>JavaScript unit test file</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <script src="/assets/prototype.js" type="text/javascript"></script>
-  <script src="/assets/unittest.js" type="text/javascript"></script>
+  <script src="assets/prototype.js" type="text/javascript"></script>
+  <script src="assets/unittest.js" type="text/javascript"></script>
   
-  <script src="/javascripts/<%= name %>.js" type="text/javascript"></script>
+  <script src="../../public/javascripts/<%= name %>.js" type="text/javascript"></script>
   
-  <link rel="stylesheet" href="/assets/unittest.css" type="text/css" />
+  <link rel="stylesheet" href="assets/unittest.css" type="text/css" />
 </head>
 <body>
 
